--- a/Dima/src/App.css
+++ b/Dima/src/App.css
@@ -1,14 +1,12 @@
 .app-wrapper {
-    width: 1200px;
+    width: 98%;
     margin: 0 auto;
     display: grid;
     grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
-    /*grid-gap: 10px;*/
-    grid-template-areas: "h h" "n c";
+    grid-template-columns: 1fr 8fr 1fr;
+    grid-template-areas: "h h h" "n c s";
 }
 
 .app-wrapper-content {
     grid-area: c;
-    background-color: rgb(64, 38, 98);
 }
